add portfolio html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,92 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <h1>Hello World</h1>
+    <header>
+        <h1>Hello! My name is <span>Eva Pointner</span>. I'm a Web Developer.</h1>
+        <a href="">Find out more</a>
+    </header>
+    <main>
+
+        <section class="about">
+            <h2>About Me</h2>
+            <div>
+                <img src="./images/origami-birds.webp" 
+                alt="" 
+                width="200">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia itaque corporis vel ex debitis vitae obcaecati tenetur exercitationem suscipit voluptatem, nobis et officia quod in ad illo eligendi consequatur fugiat?
+                </p>
+                <a href="">My resume</a>
+            </div>
+            <blockquote>
+                "Yo momma"
+            </blockquote>
+            <cite>Myself</cite>
+        </section>
+        
+        <section class="projects">
+            <h2>Projects</h2>
+         <article>
+           <h3>Project Title</h3>
+           <p>
+             Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
+             maiores nihil soluta ad at laborum error, quas quaerat quis!
+             Perferendis facilis pariatur libero quas neque magnam quisquam optio
+             quasi itaque
+           </p>
+           <a href="">Source Code</a>
+           <a href="">View Project</a>
+           <img src="./images/origami-birds.webp" alt="project" width="600" />
+         </article>
+
+         <article>
+           <h3>Project Title</h3>
+           <p>
+             Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
+             maiores nihil soluta ad at laborum error, quas quaerat quis!
+             Perferendis facilis pariatur libero quas neque magnam quisquam optio
+             quasi itaque
+           </p>
+           <a href="">Source Code</a>
+           <a href="">View Project</a>
+           <img src="./images/origami-birds.webp" alt="project" width="600" />
+         </article>
+
+         <article>
+           <h3>Project Title</h3>
+           <p>
+             Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
+             maiores nihil soluta ad at laborum error, quas quaerat quis!
+             Perferendis facilis pariatur libero quas neque magnam quisquam optio
+             quasi itaque
+           </p>
+           <a href="">Source Code</a>
+           <a href="">View Project</a>
+           <img src="./images/origami-birds.webp" alt="project" width="600" />
+         </article>
+       </section>
+
+       <section class="contact">
+        <h2>Contact</h2>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium
+          commodi laboriosam fugiat in labore, nobis officiis aut fuga rem
+          architecto porro numquam vero minus quas ipsa voluptatem dignissimos
+          aliquam magni.
+        </p>
+        <a href="mailto:eva_pointner@gmx.at">Let's talk</a>
+      </section>
+    </main>
+    <footer>
+        <ul>
+          <li><a href="">GitHub</a></li>
+          <li><a href="">GitHub</a></li>
+          <li><a href="">GitHub</a></li>
+          <li><a href="">GitHub</a></li>
+        </ul>
+        <p>@2022 - Portfolio Design by Maria Albertina</p>
+      </footer>
 </body>
 </html>
