--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <body>
     <header class="neutral-theme">
-      <h1>Hello! My name is <span>Eva Pointner</span>. I'm a Web Developer.</h1>
+      <h1>Hello! My name is <span class="-primary.color">Eva Pointner</span>. I'm a Web Developer.</h1>
       <a class="header-link button" href="#about">Find out more</a>
     </header>
     <main>
