--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 
   <body>
     <header class="neutral-theme">
-      <h1>Hello! My name is <span class="-primary.color">Eva Pointner</span>. I'm a Web Developer.</h1>
+      <h1>
+        Hello! My name is 
+        <span class="--primary.color">Eva Pointner</span>. I'm a Web Developer.
+      </h1>
       <a class="header-link button" href="#about">Find out more</a>
     </header>
     <main>
@@ -23,7 +26,7 @@
             alt="Origami birds"
             class="about-img"
           />
-          <div class="about.text">
+          <div class="about-text">
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia
               itaque corporis vel ex debitis vitae obcaecati tenetur
@@ -37,7 +40,7 @@
         <cite>Myself</cite>
       </section>
 
-      <section class="neutral-theme">
+      <section class="projects neutral-theme">
         <h2>Projects</h2>
         <article>
           <div class="article-text">
@@ -54,7 +57,6 @@
           <img
             src="./images/origami-birds.webp"
             alt="project"
-            width="600"
             class="article-img"
           />
         </article>
@@ -74,7 +76,6 @@
           <img
             src="./images/origami-birds.webp"
             alt="project"
-            width="600"
             class="article-img"
           />
         </article>
@@ -94,7 +95,6 @@
           <img
             src="./images/origami-birds.webp"
             alt="project"
-            width="600"
             class="article-img"
           />
         </article>
@@ -114,16 +114,16 @@
     <footer>
       <ul class="social">
         <li class="social-item">
-          <a class="social-link linkedin" href="./images/icon-linkedin.png"></a>
+          <a class="social-link linkedin" href="./images/icon-linkedin.png">LinkedIn</a>
         </li>
         <li class="social-item">
-          <a class="social-link youtube" href="./images/icon-youtube.png"></a>
+          <a class="social-link youtube" href="./images/icon-youtube.png">Youtube</a>
         </li>
         <li class="social-item">
-          <a class="social-link twitter" href="./images/icon-twitter.png"></a>
+          <a class="social-link twitter" href="./images/icon-twitter.png">Twitter</a>
         </li>
         <li class="social-item">
-          <a class="social-link github" href="./images/icon-github.png"></a>
+          <a class="social-link github" href="./images/icon-github.png">Github</a>
         </li>
       </ul>
       <p>@2022 - Portfolio Design by Maria Albertina</p>
