--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="neutral-theme">
       <h1>
         Hello! My name is 
-        <span class="--primary.color">Eva Pointner</span>. I'm a Web Developer.
+        <span style="color: #d2b48c">Eva Pointner</span>. I'm a Web Developer.
       </h1>
       <a class="header-link button" href="#about">Find out more</a>
     </header>
@@ -36,8 +36,8 @@
             <a class="button" href="#">My resume</a>
           </div>
         </div>
-        <blockquote>"Yo momma"</blockquote>
-        <cite>Myself</cite>
+        <blockquote>"It does not matter how slowly you go as long as you do not stop."</blockquote>
+        <cite>Confucius</cite>
       </section>
 
       <section class="projects neutral-theme">
