--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
       <nav>
         <ul>
           <div id="nav-div">
-            <li id="nav-about"><a href="#about">About</a></li>
             <li id="nav-projects">
               <a href="#projects">Projects</a>
             </li>
-            <li id="nav-contacts"><a href="#contact">Contact</a></li>
+            <li id="nav-contact">
+              <a href="#contact">Contact</a>
+            </li>
             <li id="theme"><a href="#">Change Theme</a></li>
           </div>
         </ul>
@@ -126,8 +127,8 @@
               not prepared any content and it was then that I found out that
               Lorem ipsum text generators exist that mimic Donald Trump.
               <br />
-              I am still quite proud of the styling and the overall aesthetic.
-              And my creative quotes.
+              I am still quite proud of the styling and the overall aesthetic
+              though, and my creative quotes.
             </p>
             <a
               href="https://evapunkt.github.io/my-personal-website/"
@@ -172,7 +173,7 @@
         <h2>Contact</h2>
         <p>
           For further questions, suggestions or complaints (or job offers)
-          please don't hesitate. Get in touch, we'll have a blast.
+          please don't hesitate. Get in touch, let's have a chat.
         </p>
         <a href="mailto:eva_pointner@gmx.at" class="button">Let's talk</a>
       </section>
